--- a/web/site/src/htdocs/index.html
+++ b/web/site/src/htdocs/index.html
@@ -13,7 +13,7 @@
     <div id="content">
       Human comfortability to environmental condition survey.
     </div>
-    <div id="nvd3"><svg></svg></div>
+    <div id="vis"><svg></svg></div>
     <div class="social-icons">
       <i class="icon -facebook"></i>
       <i class="icon -twitter"></i>
